fix: 재승격 직후 낡은 lastSeen으로 전 센서 결측 오탐이 발생하던 문제 수정